<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newMessage_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="pt.ulisboa.tecnico.cmov.locdev.LocationsFragment">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/finish_edit_newLocation"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@android:color/background_light"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_done_black_24dp" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:expanded="false">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="pt.ulisboa.tecnico.cmov.locdev.LocationsFragment"
        tools:showIn="@layout/message_layout">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="587dp"
            android:layout_marginTop="-2dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/location_icon_message"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/ic_place_black_24dp"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/location_name_newLocation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:inputType="text"
                        android:hint="@string/location_name_newMessage"
                        android:textAlignment="center"
                        android:textColor="#212121"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5.79"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/type_switch_newLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:checked="true"
                        android:splitTrack="false"
                        android:switchPadding="0dp"
                        android:text="@string/gps_location_newLocation"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/x_coordenate_layout_newLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewX"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/x_coordenate_newLocation"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/x_coordenate_newLocation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.07"
                        android:inputType="text"
                        android:hint="@string/coordenate_x_newLocation"
                        android:textAlignment="viewStart"
                        android:textColor="#212121"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/y_coordenate_layout_newLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewY"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/y_coordenate_newLocation"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/y_coordenate_newLocation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.07"
                        android:inputType="text"
                        android:hint="@string/coordenate_y_newLocation"
                        android:textAlignment="viewStart"
                        android:textColor="#212121"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/radius_layout_newLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewR"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:gravity="center_vertical"
                        android:text="Radius:"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/radius_newLocation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.07"
                        android:inputType="text"
                        android:hint="Radius range"
                        android:textAlignment="viewStart"
                        android:textColor="#212121"
                        android:textSize="24sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/wifiIds_layout_newLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/wifi_ids_newLocation"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"/>

                    <pt.ulisboa.tecnico.cmov.locdev.MyListView
                        android:id="@+id/wifiIds_list_newLocation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:background="#c9c9c9" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>