<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="pt.ulisboa.tecnico.cmov.locdev.MessagesFragment">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/unpost_message_fab"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@android:color/background_light"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_done_black_24dp" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:expanded="false">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="pt.ulisboa.tecnico.cmov.locdev.ProfileFragment"
        tools:showIn="@layout/message_layout">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="587dp"
            android:layout_marginTop="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="7dp"
                    android:fontFamily="serif"
                    android:paddingBottom="15dp"
                    android:text="@string/message_text"
                    android:textAlignment="center"
                    android:textColor="#212121"
                    android:textSize="24sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/location_icon_message"
                        android:layout_width="69dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_place_black_24dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/location_message"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:text="@string/message_location"
                        android:textAlignment="viewStart"
                        android:textColor="#212121"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/owner_icon_message"
                        android:layout_width="69dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_person_black_24dp" />

                    <TextView
                        android:id="@+id/owner_message"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:text="@string/message_owner"
                        android:textAlignment="textStart"
                        android:textColor="#212121"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.16"
                        android:text="FROM:"
                        android:textAlignment="textEnd"
                        android:textColor="#212121"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/from_time_icon_message"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_access_time_black_24dp" />

                    <TextView
                        android:id="@+id/from_date_text_message"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/message_date"
                        android:textAlignment="viewStart"
                        android:textColor="#212121"
                        android:textSize="24sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="66dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.20"
                        android:text="TO:"
                        android:textAlignment="textEnd"
                        android:textColor="#212121"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/to_time_icon_message"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_access_time_black_24dp" />

                    <TextView
                        android:id="@+id/to_date_text_message"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="22 / 02 / 2017"
                        android:textAlignment="viewStart"
                        android:textColor="#212121"
                        android:textSize="24sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/keys_list_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="monospace"
                    android:text="@string/message_keys_list"
                    android:textAlignment="center"
                    android:textSize="24sp" />


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>